@@ -1,3 +1,15 @@
+2008-09-06 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b21
+
+ * Fix: If an thumbnail (e.g. micronav) has an HTML id,
+        dont'use the same id again.
+
+ * Fix: Only show links to comments overview in thumbsview when
+        comments are enabled and the albums has comments.
+
+ * Fix: Microthumb navigation.
+
+ * Change: Order of methods in classes/Album.php and added phpdoc.
+
 2008-09-05 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b20
 
  * Fix: Don't show blue adminbox in photoview
